; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_policy_set.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_thread_act.c_thread_policy_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@KERN_POLICY_STATIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @thread_policy_set(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call i64 @_kernelrpc_thread_policy_set(i32 %10, i32 %11, i32 %12, i32 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = load i64, i64* @KERN_SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @_pthread_clear_qos_tsd(i32 %19)
  br label %28

21:                                               ; preds = %4
  %22 = load i64, i64* %9, align 8
  %23 = load i64, i64* @KERN_POLICY_STATIC, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %26, i64* %9, align 8
  br label %27

27:                                               ; preds = %25, %21
  br label %28

28:                                               ; preds = %27, %18
  %29 = load i64, i64* %9, align 8
  ret i64 %29
}

declare dso_local i64 @_kernelrpc_thread_policy_set(i32, i32, i32, i32) #1

declare dso_local i32 @_pthread_clear_qos_tsd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
